<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="lblWeight">Weight</string>
    <string name="txtWeight">(kg)</string>
    <string name="lblHeight">Height</string>
    <string name="txtHeight">(m)</string>
    <string name="btnReset">RESET</string>
    <string name="btnCalculate">CALCULATE BMI</string>
    <string name="main_bmi">BMI: %1$.1f %2$s</string>
    <string name="main_low">Low weight</string>
    <string name="main_normal">Normal weight</string>
    <string name="main_overweight">Overweight</string>
    <string name="main_obesity1">Obesity class 1</string>
    <string name="main_obesity2">Obesity class 2</string>
    <string name="main_obesity3">Obesity class 3</string>
    <string name="main_invalid_weight">Weight cannot be %1$s</string>
    <string name="main_invalid_height">Height cannot be %1$s</string>
</resources>
