<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblWeight" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtWeight"
        android:maxLength="6"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblHeight" />

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtHeight"
        android:maxLength="4"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnReset" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCalculate" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/result_size" />

    <ImageView
        android:id="@+id/imgBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bmi" />

</LinearLayout>
